Make some fixes on mobile styling

--- a/components/Cennik/Prices.module.scss
+++ b/components/Cennik/Prices.module.scss
@@ -2,16 +2,19 @@
 
 .content {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 40% 40%;
+  grid-template-rows: 40% 40%;
+  justify-content: center;
   justify-items: center;
   align-items: center;
   gap: 80px;
   &__section {
     border: 1px solid black;
     padding-right: 20px;
-    height: 350px;
-    width: 550px;
+    height: 100%;
+    width: 100%;
     border-radius: 20px;
   }
   &__sectionTitle {
@@ -23,5 +26,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  .content {
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(4, 20%);
   }
 }
