--- a/components/InfoBox/InfoBox.module.scss
+++ b/components/InfoBox/InfoBox.module.scss
@@ -19,3 +19,12 @@
   background-color: $content-background;
   margin: 20px 0;
 }
+
+@media only screen and (max-width: 768px) {
+  .content {
+    width: 95vw;
+    height: 250vh;
+    margin: 20px auto;
+    padding: 30px;
+  }
+}
